BUG #70561 - Re-align sorting icon on the column headers

--- a/app/assets/stylesheets/grid_overrides.scss
+++ b/app/assets/stylesheets/grid_overrides.scss
@@ -35,7 +35,7 @@ $pager_background: #eff3f8;
   display: block;
   position: absolute;
   right: 4px;
-  top: 7px;
+  top: 2px;
   width: 9px;
   height: 8px;
   background: image-url("ui/sort_indicator_desc.png") no-repeat;
